--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="Imges2.png" alt="Krishna Kunal" class="profile-picture">
+            <img src="Imges.png" alt="Krishna Kunal" class="profile-picture">
             <h1> कृष्ण कुणाल</h1>
             <h2>Krishna Kunal</h2>
             <p>Aspiring Web Development</p>
