--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1> कृष्ण कुणाल</h1>
             <h2>Krishna Kunal</h2>
             <p>Aspiring Web Development</p>
-            <p>Department of Computer Science And Data Analytics <br>IIT Patna</p>
+            <p><mark>Department of Computer Science And Data Analytics</mark> <br>IIT Patna</p>
             <p>Patna, Bihar<br>India</p>
         </header>
         <section class="about">
