--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 </head>
 <body>
 
-<!-- ================= HERO SECTION ================= -->
+<!-- ================= PORFILE SECTION ================= -->
 <section class="hero">
-    <div class="hero-content">
-        <img src="Imges.png" alt="Krishna Kunal" class="profile-img">
+    <div class="hero-box">
+        <img src="Imges.png" alt="Krishna Kunal">
         <h1>Krishna Kunal</h1>
-        <p class="tagline">
-            Data Analyst | Web Development
-        </p>
-        <div class="hero-buttons">
-            <a href="Resume_Krishna.pdf" target="_blank" class="btn primary">View Resume</a>
-            <a href="https://github.com/Krishna18-Kunal" target="_blank" class="btn secondary">Github</a>
+        <p class="tagline">Data Analyst • Web Development</p>
+
+        <div class="hero-actions">
+            <a href="Resume_Krishna.pdf" class="btn primary" target="_blank">View Resume</a>
+            <a href="https://github.com/Krishna18-Kunal" class="btn secondary" target="_blank">GitHub</a>
         </div>
     </div>
 </section>
@@ -245,4 +244,5 @@
 
 </body>
 </html>
+
 
