--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div class="hero-box">
             <img src="Imges.png" alt="Krishna Kunal">
             <h1>Krishna Kunal</h1>
-            <p class="tagline">Data Analyst • Web Development
-                • UI/UX
+            <p class="tagline">Data Analyst • Web Development • UI/UX
             </p>
 
             <div class="hero-actions">
@@ -284,3 +283,4 @@
 </body>
 
 </html>
+
