--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero-box">
             <img src="Imges.png" alt="Krishna Kunal">
             <h1>Krishna Kunal</h1>
-            <p class="tagline">Data Analyst <br>• Web Development • UI/UX
+            <p class="tagline">Data Analyst • Web Development • UI/UX
             </p>
 
             <div class="hero-actions">
@@ -283,5 +283,6 @@
 </body>
 
 </html>
+
 
 
