--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Krishna Kunal | Data Analyst Portfolio</title>
+    <title>Krishna Kunal | Data Analyst|Data Scientist Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -20,7 +20,7 @@
         <div class="hero-box">
             <img src="Imges.png" alt="Krishna Kunal">
             <h1>Krishna Kunal</h1>
-            <p class="tagline">Data Analyst • Web Development • UI/UX
+            <p class="tagline"> Data Scientist • Data Analyst • UI/UX
             </p>
 
             <div class="hero-actions">
@@ -34,12 +34,11 @@
     <section class="about">
         <h2>About Me</h2>
         <p>
-            Data Analytics professional with a strong foundation in SQL, Python, Excel, Power BI, and Artificial
-            Intelligence.
-            Skilled in cleaning, analyzing, and visualizing data, applying AI and machine learning techniques to
-            generate insights
-            and support data-driven decision-making. Interested in collaborating on meaningful analytical work in
-            fast-paced environments.
+            Detail-oriented and analytical fresher with strong foundations in <b> Data Analytics and Data Science</b>. 
+            Skilled in <strong> Python, SQL, Excel, statistics, and data visualization,AI/ML</strong> concepts with hands-on 
+            experience in data cleaning, exploratory data analysis,  basic machine learning models, and deep Learning. 
+            Passionate about turning raw data into meaningful insights to support business decisions. 
+            Seeking an entry-level role where analytical and problem-solving skills can add value.
         </p>
     </section>
 
@@ -60,7 +59,7 @@
 
             <div class="skill-card">
                 <h3>Libraries, ML & AI</h3>
-                <p>Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn</p>
+                <p>Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Deep Learning</p>
             </div>
 
             <div class="skill-card">
@@ -71,7 +70,7 @@
 
             <div class="skill-card analytical">
                 <h3>Analytical Abilities</h3>
-                <p>Data Cleaning, EDA, Data Mining</p>
+                <p>Data Cleaning, EDA, Data Mining, Statistics, Probability</p>
             </div>
         </div>
     </section>
@@ -283,6 +282,7 @@
 </body>
 
 </html>
+
 
 
 
