--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
     <section class="about">
         <h2>About Me</h2>
         <p>
-            Detail-oriented and analytical fresher with strong foundations in <b> Data Analytics and Data Science</b>. 
-            Skilled in <strong> Python, SQL, Excel, statistics, and data visualization,AI/ML</strong> concepts with hands-on 
-            experience in data cleaning, exploratory data analysis,  basic machine learning models, and deep Learning. 
-            Passionate about turning raw data into meaningful insights to support business decisions. 
-            Seeking an entry-level role where analytical and problem-solving skills can add value.
+            Detail-oriented fresher with a strong foundation in <b>Data Analytics and Data Science</b>, 
+            skilled in <strong>Python, SQL, Excel, statistics, data visualization, and AI/ML.</strong> Experienced in data cleaning, 
+            exploratory data analysis, and building basic machine learning and deep learning models. Passionate 
+            about transforming raw data into actionable insights to support data-driven business decisions.
         </p>
     </section>
 
@@ -282,6 +281,7 @@
 </body>
 
 </html>
+
 
 
 
